# snakia

./: .gitignore  README.md  flake.nix  pyproject.toml
.github/workflows/: pypi-publish.yml
src/snakia/core/: except_manager.py
src/snakia/core/ecs/: system.py
src/snakia/core/es/: dispatcher.py
src/snakia/core/loader/: plugin.py
src/snakia/core/rx/: __init__.py  async_bindable.py  base_bindable.py  bindable.py  combine.py
src/snakia/core/tui/: canvas.py
src/snakia/field/: __init__.py  field.py  t.py
src/snakia/platform/: __init__.py  android.py  layer.py  linux.py  os.py
src/snakia/property/: __init__.py  cell_property.py  classproperty.py  hook_property.py  initonly.py  priv_property.py  readonly.py
src/snakia/random/: os.py  random.py
src/snakia/types/: color.py  empty.py  unique.py  unset.py
src/snakia/utils/: frame.py  gil_enabled.py  inherit.py  this.py  throw.py
